Crash of Blender when using Video Sequencer Editor (VSE) and Grease Pencil (GP) #49996

Closed
opened 2016-11-11 18:56:16 +01:00 by Crepe · 11 comments

System Information
Geforce 1060
Ubuntu 16.04 64bits

Blender Version
Broken:
*2.78a

  • latest linux on buildbot: blender-2.78-a1aa3a8-linux-glibc211-x86_64.tar.bz2 built on: Fri Nov 11 02:18:53 2016
  • latest windows on buildbot: blender-2.78-e9689e1-win64.zip built on: Wed Nov 9 04:19:19 2016

Short description of error
Crash of Blender while doing an opengl render of grease pencil

Exact steps for others to reproduce the error
1- set the current frame to something (like 10)
2- add a grease pencil stoke
3- set the current frame back to 1
4- go on the VSE and add the current scene
5- hit "OpenGL render active viewport"

Contents of crash.txt:

Blender 2.78 (sub 2), Commit date: 2016-11-11 00:50, Hash a1aa3a8

backtrace

./blender(BLI_system_backtrace+0x1d) [0x1b6edcd]
./blender() [0x11c1101]
/lib/x86_64-linux-gnu/libc.so.6(+0x354b0) [0x7fecbe9b64b0]
./blender() [0x149a6d9]
./blender() [0x149b5a8]
./blender() [0x149b8a0]
./blender() [0x11c9d81]
./blender() [0x11ca763]
./blender() [0x11ca7a6]
./blender(wm_event_do_handlers+0x1b1) [0x11caab1]
./blender(WM_main+0x18) [0x11c1d08]
./blender(main+0x3b3) [0x11665b3]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf0) [0x7fecbe9a1830]
./blender() [0x11bdfa9]

On the attached file, do step 5 and you will have the crash right away.

**System Information** Geforce 1060 Ubuntu 16.04 64bits **Blender Version** Broken: *2.78a * latest linux on buildbot: blender-2.78-a1aa3a8-linux-glibc211-x86_64.tar.bz2 built on: Fri Nov 11 02:18:53 2016 * latest windows on buildbot: blender-2.78-e9689e1-win64.zip built on: Wed Nov 9 04:19:19 2016 **Short description of error** Crash of Blender while doing an opengl render of grease pencil **Exact steps for others to reproduce the error** 1- set the current frame to something (like 10) 2- add a grease pencil stoke 3- set the current frame back to 1 4- go on the VSE and add the current scene 5- hit "OpenGL render active viewport" Contents of crash.txt: # Blender 2.78 (sub 2), Commit date: 2016-11-11 00:50, Hash a1aa3a8 # backtrace ./blender(BLI_system_backtrace+0x1d) [0x1b6edcd] ./blender() [0x11c1101] /lib/x86_64-linux-gnu/libc.so.6(+0x354b0) [0x7fecbe9b64b0] ./blender() [0x149a6d9] ./blender() [0x149b5a8] ./blender() [0x149b8a0] ./blender() [0x11c9d81] ./blender() [0x11ca763] ./blender() [0x11ca7a6] ./blender(wm_event_do_handlers+0x1b1) [0x11caab1] ./blender(WM_main+0x18) [0x11c1d08] ./blender(main+0x3b3) [0x11665b3] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf0) [0x7fecbe9a1830] ./blender() [0x11bdfa9] On the attached file, do step 5 and you will have the crash right away.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @CrepeC

Added subscriber: @CrepeC

Added subscriber: @Almisuifre

Added subscriber: @Almisuifre
Author

bug.blend add file.

[bug.blend](https://archive.blender.org/developer/F397430/bug.blend) add file.

Added subscriber: @ParrotDenis

Added subscriber: @ParrotDenis

Added subscriber: @antoniov

Added subscriber: @antoniov

I think this was fixed by https://developer.blender.org/T49975

Try to download last daily build and test again

I think this was fixed by https://developer.blender.org/T49975 Try to download last daily build and test again
Author

I'm on the latest daily, november 11th 2:18 which is after your commit (november 10th).

I'm on the latest daily, november 11th 2:18 which is after your commit (november 10th).
Antonio Vazquez self-assigned this 2016-11-11 22:14:59 +01:00

This issue was referenced by 674c3bf894

This issue was referenced by 674c3bf89480a3278b3637d1dcfe37532f00711e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thanks!

I tested the lastest (with your commit) and i don't have the crash anymore.

Thanks! I tested the lastest (with your commit) and i don't have the crash anymore.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49996
No description provided.